--- a/buffy--a-few-good-slayers/ideas/Makefile
+++ b/buffy--a-few-good-slayers/ideas/Makefile
@@ -1,4 +1,13 @@
-all: ideas.xhtml
+all: ideas.html ideas.xhtml
 
 ideas.xhtml: ideas.pod
-	perl -E 'use Pod::Simple::XHTML; my $$p = Pod::Simple::XHTML->new; $$p->parse_file(q#$<#)' > $@
+	perl -E 'use Pod::PseudoPod::HTML; my $$p = Pod::PseudoPod::HTML->new; $$p->parse_file(q#$<#)' | perl -lane 'print if /\S/' > $@
+
+ideas.html: ideas.xhtml
+	cp -f $< $@
+
+clean:
+	rm -f ideas.xhtml
+
+view: ideas.html
+	xdg-open $<
