--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+buffy--a-few-good-slayers/ideas/ideas.html
 buffy--a-few-good-slayers/ideas/ideas.xhtml
 buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers-hebrew.screenplay-text.xhtml
 buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers-hebrew.screenplay-xml.xml
