--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers-hebrew.screenplay
 buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers.screenplay-text.xhtml
 buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers.screenplay-xml.xml
 buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers.epub
+buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers-hebrew.epub
 buffy--a-few-good-slayers/screenplay/for-epub-xhtmls/Summerschool-at-the-NSA.epub
 buffy--a-few-good-slayers/screenplay/for-epub-xhtmls/Summerschool-at-the-NSA.json
 buffy--a-few-good-slayers/screenplay/for-epub-xhtmls/images/Green-d10-dice.png
