Change to the new env var

--- a/buffy--a-few-good-slayers/screenplay/Makefile
+++ b/buffy--a-few-good-slayers/screenplay/Makefile
@@ -3,5 +3,5 @@ DOCS_BASE = $(NAME) $(NAME)-hebrew
 
 SELINA_UPLOAD_TEMP_DEST = temp-summerschool-at-the-nsa
 
-include $(SDIR)/screenplays_common.mak
+include $(SCREENPLAY_COMMON_INC_DIR)/screenplays_common.mak
 
