New cover image

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@ buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers-hebrew.epub
 buffy--a-few-good-slayers/screenplay/for-epub-xhtmls/Buffy--A-Few-Good-Slayers.epub
 buffy--a-few-good-slayers/screenplay/for-epub-xhtmls/Buffy--A-Few-Good-Slayers.json
 buffy--a-few-good-slayers/screenplay/for-epub-xhtmls/images/Green-d10-dice.png
+buffy--a-few-good-slayers/screenplay/for-epub-xhtmls/images/Buffy-A-Few-Good-Slayers-Logo--take1.svg.png
 buffy--a-few-good-slayers/screenplay/for-epub-xhtmls/*.xhtml
 buffy--a-few-good-slayers/screenplay/for-epub-xhtmls/style.css
