Update appveyor / Travis-CI.
Based on https://github.com/shlomif/perl6-CI-Gen and
https://github.com/shlomif/ci-gen-framework .

See:

* https://en.wikipedia.org/wiki/Travis_CI

* https://en.wikipedia.org/wiki/Continuous_integration .

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ before_install:
     - bash .travis.bash --cmd before_install
     - eval "$(perl -Mlocal::lib=$HOME/perl_modules)"
     - bash .travis.bash --cmd install
-    - cpanm File::Find::Object::Rule IO::All XML::Grammar::Screenplay
+    - cpanm File::Find::Object::Rule HTML::T5 IO::All Path::Tiny XML::Grammar::Screenplay
     - git clone https://github.com/shlomif/screenplays-common
 perl:
-    - "5.22"
+    - "5.26"
 python:
-    - "3.5"
+    - "3.6"
 script:
     - bash .travis.bash --cmd build
 sudo: required
