Update appveyor / Travis-CI.
Based on https://github.com/shlomif/perl6-CI-Gen and
https://github.com/shlomif/ci-gen-framework .

See:

* https://en.wikipedia.org/wiki/Travis_CI

* https://en.wikipedia.org/wiki/Continuous_integration .

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,17 @@ cache:
         - $HOME/tidyall_d
 
 os: linux
-dist: trusty
+dist: xenial
 before_install:
-    - bash .travis.bash --cmd before_install
+    - . .travis.bash --cmd before_install
     - eval "$(perl -Mlocal::lib=$HOME/perl_modules)"
-    - bash .travis.bash --cmd install
-    - cpanm File::Find::Object::Rule HTML::T5 IO::All Path::Tiny XML::Grammar::Screenplay
+    - . .travis.bash --cmd install
+    - cpanm App::XML::DocBook::Builder File::Find::Object::Rule HTML::T5 IO::All Path::Tiny XML::Grammar::Screenplay
     - git clone https://github.com/shlomif/screenplays-common
 perl:
     - "5.26"
 python:
     - "3.6"
 script:
-    - bash .travis.bash --cmd build
+    - . .travis.bash --cmd build
 sudo: required
