--- a/.travis.yml
+++ b/.travis.yml
@@ -2,23 +2,40 @@
 # (See https://github.com/shlomif/ci-gen-framework )
 # Please do not edit directly.
 
+addons:
+    apt:
+        packages:
+            - ack-grep
+            - cpanminus
+            - dbtoepub
+            - docbook-defguide
+            - docbook-xsl
+            - libperl-dev
+            - libxml-libxml-perl
+            - libxml-libxslt-perl
+            - make
+            - perl
+            - python3-pip
+            - python3-setuptools
+            - tidy
+            - xsltproc
 cache:
     directories:
         - $HOME/perl_modules
         - $HOME/tidyall_d
 
 os: linux
-dist: xenial
+dist: bionic
 before_install:
     - . .travis.bash --cmd before_install
-    - eval "$(perl -Mlocal::lib=$HOME/perl_modules)"
+    - eval "$(perl -I ~/perl_modules/lib/perl5 -Mlocal::lib=$HOME/perl_modules)"
     - . .travis.bash --cmd install
     - cpanm App::XML::DocBook::Builder File::Find::Object::Rule HTML::T5 IO::All Path::Tiny XML::Grammar::Screenplay
     - git clone https://github.com/shlomif/screenplays-common
 perl:
-    - "5.26"
+    - "5.30"
 python:
-    - "3.6"
+    - "3.8"
 script:
     - . .travis.bash --cmd build
 sudo: required
