--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 buffy--a-few-good-slayers/graphics/logo/Buffy-A-Few-Good-Slayers-Logo--take1.svg.png
 buffy--a-few-good-slayers/ideas/ideas.html
 buffy--a-few-good-slayers/ideas/ideas.xhtml
-buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers-hebrew.screenplay-text.xhtml
+buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers-hebrew.screenplay-output.xhtml
 buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers-hebrew.screenplay-xml.xml
-buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers.screenplay-text.xhtml
+buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers.screenplay-output.xhtml
 buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers.screenplay-xml.xml
 buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers.epub
 buffy--a-few-good-slayers/screenplay/Buffy--a-Few-Good-Slayers-hebrew.epub
